# booosta-proto

./: pyproject.toml  readme.md  setup.cfg  setup.py
booosta_proto/: permissions.py  utils.py
booosta_proto/proto/: inventory.proto  order.proto  personnel.proto  user.proto
booosta_proto/py_grpc/: inventory_pb2.py  inventory_pb2.pyi  inventory_pb2_grpc.py  order_pb2.py  order_pb2.pyi  order_pb2_grpc.py  payment_pb2.py  payment_pb2.pyi  personnel_pb2.py  personnel_pb2.pyi  personnel_pb2_grpc.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
django_grpc_proto/py_grpc/: user_pb2_grpc.py
src/booosta_proto/: app.py
src/booosta_proto/proto/: inventory.proto  payment.proto  personnel.proto
src/booosta_proto/py_grpc/: inventory_pb2.pyi  inventory_pb2_grpc.py  order_pb2_grpc.py  payment_pb2.py  payment_pb2.pyi  payment_pb2_grpc.py  user_pb2.py  user_pb2.pyi
src/py_grpc/: user_pb2_grpc.py
