[wheel]
universal = 1

[metadata]
name = booosta_proto
description = gRPC Proto for Test Booosta.
long_description_content_type = text/markdown
url = https://github.com/Prunedge-Dev-Team/booosta-proto
project_urls =
    Bug Tracker = https://github.com/Prunedge-Dev-Team/booosta-proto/issues
    Changelog = https://github.com/Prunedge-Dev-Team/booosta-proto/releases
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = booosta_proto
packages = find:
python_requires = >=3.6

[options.packages.find]
where = booosta_proto/booosta_proto

[options.entry_points]
console_scripts =
    booosta_proto = booosta_proto.app:entry_point